<resources>
    <string name="app_name">WhyNotsApp</string>
    <string name="need_a_new_account">Need a new Account ?</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="all_users">All Users</string>
    <string name="settings">Settings</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="welcome_to_lapit_chat">Welcome to Lapit Chat</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="change_status">change status</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="hello_there">Hello There!</string>

    <string name="save_changes">Save Changes</string>
    <string name="status">Status</string>
    <string name="display_name">Display Name</string>
    <string name="user_status">User Status</string>
    <string name="total_friends">Total Friends</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="display_name1">Display Name</string>
    <string name="last_seen">Last Seen</string>
    <string name="type_a_message">Type a message</string>
    <string name="welcome_to_whynotsapp">Welcome to WhyNotsApp</string>


</resources>
