<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/dark">

    <Button
        android:id="@+id/profile_decline_req_btn"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="@color/colorAccent"
        android:text="@string/decline_friend_request"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="258dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="0dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/def_prof" />

    <TextView
        android:id="@+id/profile_displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="296dp"
        android:text="@string/display_name"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="340dp"
        android:text="@string/user_status"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/profile_totalFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="158dp"
        android:text="@string/total_friends"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/profile_send_req_btn"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp"
        android:background="@color/colorAccent"
        android:text="@string/send_friend_request"
        android:textColor="@android:color/white" />
</RelativeLayout>